<resources>
    <string name="app_name">Android UI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- navigation header -->
    <string name="nav_header_full_name">Danielle Mariani</string>
    <string name="nav_header_email">danielle.marinai@gmail.com</string>

    <!-- navigation menu -->
    <string name="nav_menu_camera">Camera</string>
    <string name="nav_menu_gallery">Gallery</string>
    <string name="nav_menu_music">Music</string>
    <string name="nav_menu_radio">Radio</string>
    <string name="nav_menu_android">Android</string>
    <string name="nav_menu_option1">Option 1</string>
    <string name="nav_menu_option2">Option 2</string>

    <!-- camera -->
    <string name="button_take_photo">Take a Photo</string>

    <!-- feature -->
    <string name="android_feature_title">Android Features</string>
    <string name="android_feature_message">Here are some features of Android and Material Design</string>

    <!-- floating label feature -->
    <string name="feature_floating_label_title">Floating Labels</string>
    <string name="feature_floating_label_description">Basic form using Floating Labels and EditTexts</string>
    <string name="feature_floating_label_message">Simple form that shows the implementation of Floating Labels. Please, notice EditTexts\' Hints.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="button_submit">Submit</string>
    <string name="feature_floating_success_message">Your Full Name is: %1$s %2$s</string>
    <string name="action_clean">Clean</string>

    <!-- floating label feature -->
    <string name="feature_floating_button_title">Floating Action Button</string>
    <string name="feature_floating_button_description">View using Floating Action Buttons</string>
    <string name="feature_floating_button_message">View that shows the implementation of Floating Action Buttons.</string>

    <!-- Quick Return -->
    <string name="feature_quick_return_title">Quick Return</string>
    <string name="feature_quick_return_description">Basic sample of Quick Return with the Toolbar</string>

    <!-- Collapsing Toolbar feature -->
    <string name="feature_collapsing_toolbar_title">Collapsing Toolbar</string>
    <string name="feature_collapsing_toolbar_description">Flexible Space using the Toolbar</string>
    <string name="article_title">Caracas</string>
    <string name="article_large_text">Caracas, officially Santiago de León de Caracas, is the capital, the center of the Greater Caracas Area, and the largest city of Venezuela. Caracas is located along the Guaire River in the northern part of the country, following the contours of the narrow Caracas Valley on the Venezuelan coastal mountain range (Cordillera de la Costa). Terrain suitable for building lies between 760 and 910 m (2,490 and 2,990 ft) above sea level. The valley is close to the Caribbean Sea, separated from the coast by a steep 2,200 m (7,200 ft) high mountain range, Cerro El Ávila; to the south there are more hills and mountains.\n\n

The Metropolitan District of Caracas is made up of five municipalities: Libertador Municipality which is the only administrative division of the Venezuelan Capital District, and four other municipalities, which are within in Miranda State: Chacao, Baruta, Sucre, and El Hatillo. Libertador holds many of the government buildings and is the Capital District (Distrito Capital). The Distrito Capital had a population of 2,013,366 as of 2011, while the Metropolitan District of Caracas was estimated at 3,273,863 as of (2013). The Metropolitan Region of Caracas has an estimated population of 5,243,301.\n\n
Climate\n
Caracas has a tropical savanna climate (Aw). Caracas is also intertropical, with precipitation that varies between 900 and 1,300 millimeters (35 and 51 inches) (annual), in the city proper, and up to 2,000 millimeters (79 inches) in some parts of the Mountain range. While Caracas is within the tropics, due to its altitude temperatures are generally not nearly as high as other tropical locations at sea level. The annual average temperature is approximately 23.8 °C (75 °F), with the average of the coldest month (January) 22.8 °C (73 °F) and the average of the warmest month (July) 25.0 °C (77 °F), which gives a small annual thermal amplitude of 2.2 °C (4.0 °F). In the months of December and January abundant fog may appear, in addition to a sudden nightly drop in temperature, until reaching 8 °C (46 °F). This peculiar weather is known by the natives of Caracas as the Pacheco. In addition, nightly temperatures at any time of the year are much (14 to 20 °C) lower than daytime highs and usually do not remain above 24 °C (75 °F), resulting in very pleasant evening temperatures. Hail storms appear in Caracas, although only on rare occasions. Electrical storms are much more frequent, especially between June and October, due to the city being in a closed valley and the orographic action of Cerro El Ávila. Caracas record extremes have been reported in other city\'s stations to reach a minimum of 6 °C (43 °F) and a maximum of 35.5 °C (95.9 °F).\n\n
Demographics\n
According to the population census of 2011 the Caracas proper (Distrito Capital) is over 3.0 million inhabitants,[24] while that of the Metropolitan District of Caracas is estimated at 5.4 million as of 2011. The vast majority of the population is composed from immigrants and their descendents primarily from Spain, Italy, Germany and Portugal. There is also a considerable Syrian and Lebanese population present in the country.</string>

    <!-- Collapsing Image Toolbar feature -->
    <string name="feature_collapsing_image_toolbar_title">Collapsing Image Toolbar</string>
    <string name="feature_collapsing_image_toolbar_description">Flexible Space example using an Image</string>

    <!-- TabLayout feature -->
    <string name="feature_tablayout_title">TabLayout</string>
    <string name="feature_tablayout_description">Basic sample of Material Tabs</string>

    <!-- TabLayout Image Toolbar feature -->
    <string name="feature_tablayout_image_toolbar_title">TabLayout with Flexible Space</string>
    <string name="feature_tablayout_image_toolbar_description">Basic sample of Material Tabs with Image Toolbar</string>

    <!-- Intro ViewPager -->
    <string name="feature_intro_viewpager_title">Intro ViewPager</string>
    <string name="feature_intro_viewpager_description">ViewPager based on Google introduction style</string>
    <string name="button_skip">Skip</string>
    <string name="button_finish">Finish</string>

    <!-- Ripple Button feature -->
    <string name="feature_ripple_button_title">Ripple Drawable</string>
    <string name="feature_ripple_button_description">Sample of Ripple Drawable over buttons</string>
    <string name="feature_ripple_button_message">Click on buttons and icons to see the Ripple Effect</string>
</resources>
