<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_menu_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_menu_gallery" />
        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_menu_music" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_menu_radio" />
    </group>

    <item android:title="@string/nav_menu_android">
        <menu>
            <item
                android:id="@+id/nav_option1"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_menu_option1" />
            <item
                android:id="@+id/nav_option2"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_menu_option2" />
        </menu>
    </item>

</menu>